# cvesieve

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  scan.sarif.json
benchmarks/: run.sh
docs/: design-overview.md  poc-plan.md
src/cvesieve/: allowlist.py  cli.py  engine.py  models.py  output.py  parser.py
src/cvesieve.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cvesieve/enrichment/: cvss.py  epss.py  kev.py  nvd.py
tests/: test_allowlist.py  test_engine.py  test_enrichment.py  test_integration.py  test_nvd.py  test_output_formats.py  test_parser.py
tests/fixtures/: allowlist.toml  docker_scout.sarif.json  grype.sarif.json  trivy.sarif.json
