[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cvesieve"
version = "0.1.0"
description = "Filter CVE scanner noise using real-world exploitability signals"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]

[project.scripts]
cvesieve = "cvesieve.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
